--- a/lab1/index.html
+++ b/lab1/index.html
@@ -41,5 +41,12 @@
         <h2>whois kubsu-dev</h2>
         <img src="whoiskubsu-dev.jpg" alt="whoiskubsu-dev" width="600" height="400">
     </div>
+
+
+    <div>
+        <h2>Внутри Filezilla после скачивания</h2>
+        <img src="image.png" alt="Filezilla" width="600" height="400">
+    </div>
 </body>
+
 </html>
